# A6-Ray-Tracing

./: CMakeLists.txt
src/: Camera.cpp  Camera.h  Hit.h  Light.h  Material.cpp  Material.h  Ray.h  Scene.cpp  Scene.h  Shape.h  Sphere.h  main.cpp
